src/test/deca/context/valid/sansObjet/IfThenElse.deca
{
    boolean a = true;
    if (!a){
        print("Ah Dommage");
    }else {
        print ("Oui ici c'est parfait");
    }
}