src/test/deca/context/invalid/sansObjet/BadMultIf.deca
{
    if (true){
        if (true){
            if (true){
                if (true){
                    if (true){
                        if(true){
                            print("jusque la OK");
                            if (!1){
                                print("Ah ici pas trop");
                            }
                        }
                    }
                }
            }
        }
    }
}
